--- a/coding-challenge.ipynb
+++ b/coding-challenge.ipynb
@@ -6,14 +6,14 @@
    "metadata": {},
    "source": [
     "# Sources\n",
-    "- https://github.com/hwd404/FOLD-R-PP (FoldR++ algorithm GitHub repo)\n",
-    "- https://arxiv.org/abs/2110.07843 (Research paper describing the FoldR++ algorithm by UTD's Dr. Gopal Gupta)"
+    "- https://github.com/hwd404/FOLD-R-PP (FOLD-R++ algorithm GitHub repo)\n",
+    "- https://arxiv.org/abs/2110.07843 (Research paper describing the FOLD-R++ algorithm by UTD's Dr. Gopal Gupta)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "67f1df28",
+   "id": "1be3b753",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "35e10a9e",
+   "id": "1bc04758",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "fb76a116",
+   "id": "39df7a4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "eaa6957e",
+   "id": "51e91045",
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "494e8e06",
+   "id": "bf0155ba",
    "metadata": {},
    "outputs": [
     {
